--- a/javascript/Logical-Programming/secondUppercase.html
+++ b/javascript/Logical-Programming/secondUppercase.html
@@ -8,20 +8,20 @@
   <body>
     <script>
       function csc(nums) {
-        let copy = [];
         for (let i = 0; i < nums.length; i++) {
           let str = "";
-          for (let j = 0; j < nums[i].length; j++) {
-            if (j == 1) {
+          for (let j = 0; j < nums[i].length - 1; j++) {
+            if (j === 1) {
               str += nums[i][j].toUpperCase();
+            } else {
+              str += nums[i][j];
             }
-            str += nums[i][j];
           }
-          copy[i] = str;
+          nums[i] = str;
         }
-        console.log(copy);
+        console.log(nums);
       }
-      csc(["apple", "mango", "orange", "banana"]);
+      csc(["apple", "orange", "banana"]);
     </script>
   </body>
 </html>
