--- a/f-c-c-css-session/images.html
+++ b/f-c-c-css-session/images.html
@@ -15,16 +15,16 @@
         alt=""
       />
     </div> -->
-    <!-- <br />
+    <br />
     <div class="container">
       <div class="hero">
         <div class="image-div">
-          <img
+          <!-- <img
             src="https://st2.depositphotos.com/2001755/8564/i/450/depositphotos_85647140-stock-photo-beautiful-landscape-with-birds.jpg"
             alt=""
             height="200"
             width="300"
-          />
+          /> -->
           <figcaption>Beautiful Images Nature</figcaption>
         </div>
         <h1 class="h1">
@@ -32,7 +32,7 @@
           <span class="nowrap">i'm Anil</span>
         </h1>
       </div>
-    </div> -->
+    </div>
     <div>
         <p class="clip">anil kumar k r</p>
     </div>
