--- a/javascript/Logical-Programming/Palindrome.html
+++ b/javascript/Logical-Programming/Palindrome.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Palindrome Program</title>
-</head>
-<body>
-  <script>
-function palindrome() {
-  // debugger;
-  let input = 23;
-  let input01 = input;
-  let reverseinput = 0;
-  while (input > 0) {
-    let rem = input % 10;
-    reverseinput = reverseinput * 10 + rem;
-    input = parseInt(input / 10);
-  }
-if(reverseinput===input01){
-    console.log(`${input01} is palindrome Number`);
-}
-else{
-    console.log(`${input01} is Not palindrome Number`);
-}
-}
-palindrome();
-  </script>
-</body>
+  </head>
+  <body>
+    <script>
+      // Number palindrome
+      // function palindrome() {
+      //   // debugger;
+      //   let input = 123;
+      //   let copyIP = input;
+      //   let reverse = 0;
+      //   while (input > 0) {
+      //     let rem = input % 10;
+      //     reverse = reverse * 10 + rem;
+      //     input = parseInt(input / 10);
+      //   }
+      //   reverse===copyIP ? console.log(`${copyIP} is Palindrome`):console.log(`${copyIP} is Not Palindrome`);
+      // }
+      // palindrome();
+
+      // ********String palindrome*********
+      // let str = "Gadag";
+      // let reversestr = "";
+      // for (let i = str.length - 1; i >= 0; i--) {
+      //   reversestr += str[i];
+      // }
+      // str === reversestr
+      //   ? console.log(`${str} is palindrome`)
+      //   : console.log(`${str} is Not palindrome`);
+    </script>
+  </body>
 </html>
