--- a/javascript/Logical-Programming/amstrongNo.html
+++ b/javascript/Logical-Programming/amstrongNo.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amstrong Number</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        
-// ****Amstrong Number***
-let n = 16345;
-let n2 = n;
-let copy = n;
-let length = 0;
-let arm=0;
-while (n2 != 0) {
-  n2 = parseInt(n2 / 10);
-  length++;
-}
-while(n!=0){
-let rem=n%10;
-let mul=1;
-for(let i=1;i<=length;i++)
-{
-    mul=mul*rem;
-}
-arm=mul+arm;
-n=parseInt(n/10)
-}
-if(copy===arm){
-    console.log(`${copy} is Amstrong Number`);
-}
-else{
-    console.log(`${copy} is Not Amstrong Number`);
-}
+      // ****Amstrong Number***
+      let n = 16345;
+      let n2 = n;
+      let copy = n;
+      let length = 0;
+      let arm = 0;
+      while (n2 != 0) {
+        n2 = parseInt(n2 / 10);
+        length++;
+      }
+      while (n != 0) {
+        let rem = n % 10;
+        let mul = 1;
+        for (let i = 1; i <= length; i++) {
+          mul = mul * rem;
+        }
+        arm = mul + arm;
+        n = parseInt(n / 10);
+      }
+      if (copy === arm) {
+        console.log(`${copy} is Amstrong Number`);
+      } else {
+        console.log(`${copy} is Not Amstrong Number`);
+      }
     </script>
-</body>
+  </body>
 </html>
