--- a/javascript/Loops/index.html
+++ b/javascript/Loops/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local-Session-Storage-javaScript</title>
-<script src="lo.js"></script>
+<script src="js_loops.js"></script>
 </head>
 <body>
    
