--- a/javascript/promise/index.html
+++ b/javascript/promise/index.html
@@ -6,8 +6,9 @@
     <title>Promise-javaScript</title>
   </head>
   <body>
-    <script src="promise1.js"></script>
-    <!-- <script src="fetch.js"></script> -->
+    <div id="root"></div>
+    <!-- <script src="promise1.js"></script> -->
+    <script src="fetch.js"></script>
     <!-- <script src="promise1.js"></script> -->
   </body>
 </html>
